Remove all unnecessary data from export + verify import (#382)
* Remove all unnecessary data from export

* Fix missing verification hash

* Adapt unittest

* Adapt API docu

* Update API docu

* Validate import

* Remove more data

* Avoid double NS prefix on imported pages
